WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158593
WorkerNavigator is missing some attributes
https://bugs.webkit.org/show_bug.cgi?id=158593
Summary
WorkerNavigator is missing some attributes
Chris Dumez
Reported
2016-06-09 16:43:58 PDT
WorkerNavigator is missing some NavigatorID attributes:
https://html.spec.whatwg.org/multipage/workers.html#the-workernavigator-object
https://html.spec.whatwg.org/multipage/webappapis.html#navigatorid
We should use the same NavigatorID interface for Navigator and WorkerNavigator.
Attachments
Patch
(28.20 KB, patch)
2016-06-09 19:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(28.13 KB, patch)
2016-06-09 20:21 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(29.74 KB, patch)
2016-06-10 15:56 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(30.69 KB, patch)
2016-06-10 16:52 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(30.68 KB, patch)
2016-06-10 16:55 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-06-09 16:45:21 PDT
<
rdar://problem/26731334
>
Chris Dumez
Comment 2
2016-06-09 19:54:34 PDT
Created
attachment 280978
[details]
Patch
Chris Dumez
Comment 3
2016-06-09 20:21:49 PDT
Created
attachment 280984
[details]
Patch
Darin Adler
Comment 4
2016-06-10 15:24:38 PDT
Comment on
attachment 280984
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280984&action=review
> Source/WebCore/page/NavigatorBase.h:35 > + String appName() const;
Should be a static member function. Annoying that it makes a new String every time and doesn’t use ASCIILiteral. Same for most of the other functions below.
> Source/WebCore/page/NavigatorBase.h:38 > + String platform() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:40 > + String appCodeName() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:41 > + String product() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:42 > + String productSub() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:43 > + String vendor() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:44 > + String vendorSub() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:46 > + bool onLine() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:48 > + String language() const;
Should be a static member function.
> Source/WebCore/page/NavigatorBase.h:51 > + int hardwareConcurrency() const;
Should be a static member function.
> Source/WebCore/platform/Language.cpp:115 > + Vector<String> overrideCopy; > + overrideCopy.reserveInitialCapacity(override.size()); > + for (String& language : override) > + overrideCopy.uncheckedAppend(language.isolatedCopy()); > + return overrideCopy;
This should be an isolatedCopy function that takes a Vector<String> and returns another Vector<String>, not written in line here like this.
Chris Dumez
Comment 5
2016-06-10 15:56:58 PDT
Created
attachment 281054
[details]
Patch
Chris Dumez
Comment 6
2016-06-10 16:52:23 PDT
Created
attachment 281060
[details]
Patch
Chris Dumez
Comment 7
2016-06-10 16:55:19 PDT
Created
attachment 281061
[details]
Patch
WebKit Commit Bot
Comment 8
2016-06-11 10:42:48 PDT
Comment on
attachment 281061
[details]
Patch Clearing flags on attachment: 281061 Committed
r201970
: <
http://trac.webkit.org/changeset/201970
>
WebKit Commit Bot
Comment 9
2016-06-11 10:42:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug