Source/WebCore/page/Navigator.cpp
@@ -38,7 +38,6 @@
 #include "SecurityOrigin.h"
 #include "Settings.h"
 #include <wtf/HashSet.h>
-#include <wtf/NumberOfCores.h>
 #include <wtf/StdLibExtras.h>
 
 using namespace WTF;
@@ -76,11 +75,6 @@ String Navigator::appVersion() const
     if (shouldHideFourDot(m_frame))
         appVersion.replace("4.", "4_");
     return appVersion;
-}
-
-String Navigator::language() const
-{
-    return defaultLanguage();
 }
 
 String Navigator::userAgent() const
@@ -133,28 +127,6 @@ bool Navigator::javaEnabled() const
 
     return true;
 }
-
-#if defined(ENABLE_NAVIGATOR_HWCONCURRENCY)
-int Navigator::hardwareConcurrency() const
-{
-    // Enforce a maximum for the number of cores reported to mitigate
-    // fingerprinting for the minority of machines with large numbers of cores.
-    // If machines with more than 8 cores become commonplace, we should bump this number.
-    // see https://bugs.webkit.org/show_bug.cgi?id=132588 for the
-    // rationale behind this decision.
-#if PLATFORM(IOS)
-    const int maxCoresToReport = 2;
-#else
-    const int maxCoresToReport = 8;
-#endif
-    int hardwareConcurrency = numberOfProcessorCores();
-
-    if (hardwareConcurrency > maxCoresToReport)
-        return maxCoresToReport;
-
-    return hardwareConcurrency;
-}
-#endif
 
 #if PLATFORM(IOS)
 bool Navigator::standalone() const
