Source/WebCore/platform/Language.h
@@ -31,8 +31,8 @@
 
 namespace WebCore {
 
-WEBCORE_EXPORT String defaultLanguage();
-WEBCORE_EXPORT Vector<String> userPreferredLanguages();
+WEBCORE_EXPORT String defaultLanguage(); // Thread-safe.
+WEBCORE_EXPORT Vector<String> userPreferredLanguages(); // Thread-safe.
 Vector<String> userPreferredLanguagesOverride();
 WEBCORE_EXPORT void overrideUserPreferredLanguages(const Vector<String>&);
 size_t indexOfBestMatchingLanguageInList(const String& language, const Vector<String>& languageList, bool& exactMatch);
